--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -40,12 +40,13 @@
                     <i class="password-toggle fas fa-eye-slash"></i>
                     <div class="divider-nospace"></div>
                     <p class="text-danger" *ngIf="retypePassword.length < 3 && registerForm.form.touched">Ít nhất 3 kí tự</p>
-                    <p class="text-danger" *ngIf="registerForm.controls['retypePassword'].hasError('passwordMissmatch') && registerForm.form.touched ">Mật khẩu không khớp</p>
+                    <p class="text-danger" *ngIf="registerForm.controls['retypePassword']?.hasError('passwordMissmatch') && registerForm.form.touched ">Mật khẩu không khớp</p>
                 </div>
                 <div class="mt-3"></div>
                 <div class="form-group password-field">
                     <label for="fullName">Họ và tên</label>
                     <input type="text"
+                    name="fullName"
                     [(ngModel)]="fullName" 
                     required
                     class="form-control" id="full-name">
@@ -58,16 +59,17 @@
                     [(ngModel)]="dateOfBirth" 
                     name="dateOfBirth"
                     (input) = "registerForm.form.markAsTouched(); checkAge()"
-                    class="form-control" id="full-name">
+                    class="form-control" id="dateOfBirth">
                     <div class="divider-nospace"></div>
-                    <p class="text-danger" *ngIf="registerForm.controls['dateOfBirth'].hasError('invalidAge') && registerForm.form.touched ">chauw đu 18</p>
+                    <p class="text-danger" *ngIf="registerForm.controls['dateOfBirth']?.hasError('invalidAge') && registerForm.form.touched ">chua đu 18</p>
                 </div>
                 <div class="mt-3"></div>
                 <div class="form-group password-field">
                     <label for="password">Địa chỉ</label>
                     <input type="text"
                     [(ngModel)]="address" 
-                    class="form-control" id="full-name">
+                    name="address"
+                    class="form-control" id="address">
                     <div class="divider-nospace"></div>
                 </div>
 
