new change form

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -83,7 +83,7 @@
                         </span>
                     </div>
                 </div>
-                <button type="button" (click)="register()" class="login-button">Đăng ký</button>
+                <button type="button" (click)="register(registerForm)" class="login-button">Đăng ký</button>
                 <div class="divider"></div>
                 <p class="text-center">Bạn đã có tài khoản? <span>
                         <a href="" class="register-link">Đăng nhập</a>
