--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -8,13 +8,13 @@
                 <div class="form-group">
                     <label for="phone">Phone</label>
                     <input type="text" name="phone" 
-                    [(ngModel)]="phone" 
+                    [(ngModel)]="phoneNumber" 
                     (focus) = "registerForm.form.markAsTouched()"
                     (input) = "onPhoneChange()"
                     required
                     id="email" class="form-control">
                     <div class="divider-nospace"></div>
-                    <p class="text-danger" *ngIf="phone.length < 6 && registerForm.form.touched">Ít nhất 6 kí tự</p>
+                    <p class="text-danger" *ngIf="phoneNumber.length < 6 && registerForm.form.touched">Ít nhất 6 kí tự</p>
                 </div>
                 <div class="mt-3"></div>
                 <div class="form-group password-field">
