login get token

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -45,7 +45,7 @@
                         <option>Quản trị viên</option>
                     </select>
                 </div>
-                <button type="button" (click)="login(loginForm)" class="login-button">Đăng nhập</button>
+                <button type="button" (click)="login()" class="login-button">Đăng nhập</button>
                 <div class="divider"></div>
                 <p class="text-center">Bạn chưa đăng ký? <span>
                         <a href="" class="register-link"></a>
