--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,59 +1,57 @@
 <app-header></app-header>
 <div class="container">
-    <form #loginForm = "ngForm">
-    <div class="row">
-        <div class="col-md-6 offset-md-3">
-            <div class="login-form mx-auto">
-                <h2 class="login-header">Đăng nhập</h2>
-                <div class="form-group">
-                    <label for="email">Email/Phone</label>
-                    <input type="text" name="phoneNumber" 
-                    [(ngModel)]="phoneNumber" 
-                    (focus) = "loginForm.form.markAsTouched()"
-                    
-                    id="email" class="form-control">
-                    <div class="divider-nospace"></div>
-                    <p class="text-danger" *ngIf="phoneNumber.length < 6 && loginForm.form.touched">Ít nhất 6 kí tự</p>
-                </div>
-                <div class="mt-5"></div>
-                <div class="form-group password-field">
-                    <label for="password">Mật Khẩu</label>
-                    <input type="password" placeholder="Ít nhất 3 kí tự"
-                    name="password"
-                    [(ngModel)]="password"
-                    required 
-                    class="form-control" id="password">
-                    <i class="password-toggle fas fa-eye-slash"></i>
-                    <div class="divider-nospace"></div>
-                </div>
-
-                <div class="form-group">
-                    <div class="form-check checkbox-text">
-                        <span style="display: flex;">
-                            <input type="checkbox" class="form-check-input" name="" id="remember">
-                            <label class="form-check-label text-start">
-                                Ghi nhớ đăng nhập
-                            </label>
-                        </span>
-                        <a href="#" class="register-link">Quên mật khẩu</a>
+    <form #loginForm="ngForm">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <div class="login-form mx-auto">
+                    <h2 class="login-header">Đăng nhập</h2>
+                    <div class="form-group">
+                        <label for="email">Phone</label>
+                        <input type="text" name="phoneNumber"
+                            [(ngModel)]="phoneNumber"
+                            (focus)="loginForm.form.markAsTouched()"
+                            id="email" class="form-control">
+                        <div class="divider-nospace"></div>
+                        <p class="text-danger" *ngIf="phoneNumber.length < 6 && loginForm.form.touched">Ít nhất 6 kí tự</p>
                     </div>
-                </div>
-                <div class="form-group">
-                    <select class="form-control access-right" [(ngModel)]="selectedRole">
-                        <option selected disabled>Quyền đăng nhập</option>
-                        <option *ngFor="let role of roles" [ngValue]="role">{{role.name}}</option>
-                       
-                    </select>
-                </div>
-                <button type="button" (click)="login()" class="login-button">Đăng nhập</button>
-                <div class="divider"></div>
-                <p class="text-center">Bạn chưa đăng ký? <span>
-                        <a href="" class="register-link"></a>
-                    </span></p>
+                    <div class="mt-5"></div>
+                    <div class="form-group password-field">
+                        <label for="password">Mật Khẩu</label>
+                        <input type="password" placeholder="Ít nhất 3 kí tự"
+                            name="password"
+                            [(ngModel)]="password"
+                            required
+                            class="form-control" id="password">
+                        <i class="password-toggle fas fa-eye-slash"></i>
+                        <div class="divider-nospace"></div>
+                    </div>
 
+                    <div class="form-group">
+                        <div class="form-check checkbox-text">
+                            <span style="display: flex;">
+                                <input type="checkbox" class="form-check-input" name="remember" id="remember">
+                                <label class="form-check-label text-start">
+                                    Ghi nhớ đăng nhập
+                                </label>
+                            </span>
+                            <a href="#" class="register-link">Quên mật khẩu</a>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <select class="form-control access-right" name="selectedRole" [(ngModel)]="selectedRole">
+                            <option selected disabled>Quyền đăng nhập</option>
+                            <option *ngFor="let role of roles" [ngValue]="role">{{role.name}}</option>
+                        </select>
+                    </div>
+                    <button type="button" (click)="login()" class="login-button">Đăng nhập</button>
+                    <div class="divider"></div>
+                    <p class="text-center">Bạn chưa đăng ký? <span>
+                            <a href="" class="register-link"></a>
+                        </span></p>
+
+                </div>
             </div>
         </div>
-    </div>
     </form>
 </div>
 
