--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -16,102 +16,38 @@
         </select>
     </div>
     <div class="row">
-        <div class="col-lg-4 col-md-6">
-            <div class="product-item">
-                <img src="https://images2.thanhnien.vn/528068263637045248/2024/1/25/e093e9cfc9027d6a142358d24d2ee350-65a11ac2af785880-17061562929701875684912.jpg"
-                    alt="Product Image" class="product-image">
-                <h3 class="product-name">Product 1</h3>
-                <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, beatae ex.
-                    Nulla aspernatur ullam voluptatem quae quas, harum, cum non eius nesciunt dolor, qui reprehenderit
-                    fugit voluptatibus maiores quos doloremque.</p>
-                <p class="product-warranty">Bảo hành</p>
-                <p class="product-price">Giá: <del>200$</del> 100$</p>
-                <div class="product-rating">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="product-actions">
-                    <button class="btn btn-primary">Thêm vào rỏ hàng</button>
-                    <span class="space-x"></span>
-                    <button class="btn btn-success">Mua ngay</button>
-                </div>
+        <div class="col-lg-4 col-md-6" *ngFor="let product of products">
+          <div class="product-item">
+            <img [src]="product.url" alt="Product Image" class="product-image">
+            <h3 class="product-name">{{product.name}}</h3>
+            <p class="product-description">{{product.description}}</p>
+            <p class="product-warranty">Bảo hành</p>
+            <p class="product-price">Giá: {{product.price}}</p>
+            <div class="product-rating">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
             </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-            <div class="product-item">
-                <img src="https://images2.thanhnien.vn/528068263637045248/2024/1/25/e093e9cfc9027d6a142358d24d2ee350-65a11ac2af785880-17061562929701875684912.jpg"
-                    alt="Product Image" class="product-image">
-                <h3 class="product-name">Product 1</h3>
-                <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, beatae ex.
-                    Nulla aspernatur ullam voluptatem quae quas, harum, cum non eius nesciunt dolor, qui reprehenderit
-                    fugit voluptatibus maiores quos doloremque.</p>
-                <p class="product-warranty">Bảo hành</p>
-                <p class="product-price">Giá: <del>200$</del> 100$</p>
-                <div class="product-rating">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="product-actions">
-                    <button class="btn btn-primary">Thêm vào rỏ hàng</button>
-                    <span class="space-x"></span>
-                    <button class="btn btn-success">Mua ngay</button>
-                </div>
+            <div class="product-actions">
+              <button class="btn btn-primary">Thêm vào rỏ hàng</button>
+              <span class="space-x"></span>
+              <button class="btn btn-success">Mua ngay</button>
             </div>
+          </div>
         </div>
-        <div class="col-lg-4 col-md-6">
-            <div class="product-item">
-                <img src="https://images2.thanhnien.vn/528068263637045248/2024/1/25/e093e9cfc9027d6a142358d24d2ee350-65a11ac2af785880-17061562929701875684912.jpg"
-                    alt="Product Image" class="product-image">
-                <h3 class="product-name">Product 1</h3>
-                <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, beatae ex.
-                    Nulla aspernatur ullam voluptatem quae quas, harum, cum non eius nesciunt dolor, qui reprehenderit
-                    fugit voluptatibus maiores quos doloremque.</p>
-                <p class="product-warranty">Bảo hành</p>
-                <p class="product-price">Giá: <del>200$</del> 100$</p>
-                <div class="product-rating">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="product-actions">
-                    <button class="btn btn-primary">Thêm vào rỏ hàng</button>
-                    <span class="space-x"></span>
-                    <button class="btn btn-success">Mua ngay</button>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-4 col-md-6">
-            <div class="product-item">
-                <img src="https://images2.thanhnien.vn/528068263637045248/2024/1/25/e093e9cfc9027d6a142358d24d2ee350-65a11ac2af785880-17061562929701875684912.jpg"
-                    alt="Product Image" class="product-image">
-                <h3 class="product-name">Product 1</h3>
-                <p class="product-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, beatae ex.
-                    Nulla aspernatur ullam voluptatem quae quas, harum, cum non eius nesciunt dolor, qui reprehenderit
-                    fugit voluptatibus maiores quos doloremque.</p>
-                <p class="product-warranty">Bảo hành</p>
-                <p class="product-price">Giá: <del>200$</del> 100$</p>
-                <div class="product-rating">
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i>
-                </div>
-                <div class="product-actions">
-                    <button class="btn btn-primary">Thêm vào rỏ hàng</button>
-                    <span class="space-x"></span>
-                    <button class="btn btn-success">Mua ngay</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+      </div>
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item" *ngIf="currentPage > 1"><a class="page-link" href="#" (click)="onPageChange(1)">First</a></li>
+          <li class="page-item" *ngIf="currentPage > 1"><a class="page-link" href="#" (click)="onPageChange(currentPage - 1)">Previous</a></li>
+          <ng-container *ngFor="let page of visiblePages">
+            <li class="page-item" [ngClass]="{'active': page === currentPage}"><a class="page-link" href="#" (click)="onPageChange(page)">{{ page }}</a></li>
+          </ng-container>
+          <li class="page-item" *ngIf="currentPage < totalPages"><a class="page-link" href="#" (click)="onPageChange(currentPage + 1)">Next</a></li>
+          <li class="page-item" *ngIf="currentPage < totalPages"><a class="page-link" href="#" (click)="onPageChange(totalPages)">Last</a></li>
+        </ul>
+      </nav>
+      
 <app-footer></app-footer>
