--- a/src/app/components/detail-product/detail-product.component.html
+++ b/src/app/components/detail-product/detail-product.component.html
@@ -8,52 +8,33 @@
         <div class="col-md-6">
             <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
+                    <div class="carousel-item " *ngFor="let image of product?.product_images;let i = index"
+                    [ngClass]="{'active': i === currentImageIndex}"
+                    >
                         <div class="square-image">
-                            <img src="https://images.pexels.com/photos/719396/pexels-photo-719396.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                                alt="product image" class="product-image">
-                        </div>
-                    </div>
-                    <div class="carousel-item ">
-                        <div class="square-image">
-                            <img src="https://images.pexels.com/photos/719396/pexels-photo-719396.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                                alt="product image" class="product-image">
-                        </div>
-                    </div>
-                    <div class="carousel-item ">
-                        <div class="square-image">
-                            <img src="https://images.pexels.com/photos/719396/pexels-photo-719396.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                            <img [src]="image.image_url"
                                 alt="product image" class="product-image">
                         </div>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-                    data-bs-slide="prev">
+                    data-bs-slide="prev" (click)="previousImage()" >
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
+                    <span class="visually-hidden" >Previous</span>
                 </button>
                 <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-                    data-bs-slide="next">
+                    data-bs-slide="next" (click)="nextImage()">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
             <div class="row">
                 <div class="thumbnail-container">
-                    <div class="thumbnail-item active ">
-                        <img src="https://images.pexels.com/photos/719396/pexels-photo-719396.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                                alt="product image" class="thumbnail-image">
-                    </div>
-                    <div class="thumbnail-item ">
-                        <img src="https://images.pexels.com/photos/719396/pexels-photo-719396.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                                alt="product image" class="thumbnail-image">
-                    </div>
-                    <div class="thumbnail-item ">
-                        <img src="https://images.pexels.com/photos/719396/pexels-photo-719396.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                                alt="product image" class="thumbnail-image">
-                    </div>
-                    <div class="thumbnail-item ">
-                        <img src="https://images.pexels.com/photos/719396/pexels-photo-719396.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                    <div class="thumbnail-item" *ngFor="let image of product?.product_images; let i = index"
+                        [ngClass]="{'active': i === currentImageIndex}"
+                        (click)="thumbnailClick(i)"
+                    >
+                        <img [src]="image.image_url"
                                 alt="product image" class="thumbnail-image">
                     </div>
                 </div>
@@ -61,9 +42,9 @@
         </div>
         <div class="col-md-6">
             <div class="product-details">
-                <h2>Thông tin chi tiết sản phẩm</h2>
-                <p>Mô tả sản phẩm</p>
-                <p>Giá: $99</p>
+                <h2>{{product?.name}}</h2>
+                <p>{{product?.description}}</p>
+                <p>Giá: {{product?.price}}</p>
                 <div class="product-actions">
                     <button class="btn btn-primary">Thêm vào giỏ hàng</button>
                     <button class="btn btn-primary">Mua ngay</button>
