--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -1,26 +1,47 @@
 <app-header></app-header>
 <div class="container">
     <div class="intro-section">
-        <h1>Đây là trang order</h1>
-        <p>Sử dung bs</p>
+        <h1>Đặt hàng</h1>
     </div>
     <div class="row">
         <div class="col-md-6">
             <h2 class="product-header">Thông tin người nhận</h2>
-            <form class="form-inline">
+            <!-- <form class="form-inline"> -->       
                 <div class="mb-3">
                     <label for="name" class="form-label">Họ và tên</label>
-                    <input type="text" name="" id="name" class="form-control">
+                    <input type="text" [(ngModel)]="orderData.fullname" name="" id="name" class="form-control">
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
-                    <input type="text" name="" id="email" class="form-control">
+                    <input type="text" [(ngModel)]="orderData.email" name="" id="email" class="form-control">
                 </div>
                 <div class="mb-3">
                     <label for="Phone" class="form-label">Số điện thoại</label>
-                    <input type="text" name="" id="phone" class="form-control">
+                    <input type="text" [(ngModel)]="orderData.phone_number" name="" id="phone" class="form-control">
                 </div>
-            </form>
+                <div class="mb-3">
+                    <label for="address" class="form-label">Địa chỉ</label>
+                    <input type="text" [(ngModel)]="orderData.address" name="" id="address" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label for="note" class="form-label">Ghi chú</label>
+                    <input type="text" [(ngModel)]="orderData.note" name="" id="note" class="form-control">
+                </div>
+                <div class="mb-3 form-group">
+                    <label for="shippingMethod" class="form-label">Phương thức vận chuyển</label>
+                    <select class="form-control" name="" id="shippingMethod" [(ngModel)]="orderData.shipping_method">
+                        <option value="express">Nhanh (express)</option>
+                        <option value="normal">Thường (normal)</option>
+                    </select>
+                </div>
+                <div class="mb-3 form-group">
+                    <label for="paymentMethod" class="form-label">Phương thức Thanh Toán</label>
+                    <select class="form-control" name="" id="paymentMethod" [(ngModel)]="orderData.payment_method">
+                        <option value="cod">Thanh toán khi nhận hàng (COD)</option>
+                        <option value="orther">thanh toán khác</option>
+                    </select>
+                </div>  
+            <!-- </form> -->
         </div>
         <div class="col-md-6">
             <h2 class="product-order">Sản phẩm đã đặt hàng</h2>
@@ -34,40 +55,27 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr *ngFor="let item of cartItems">
                         <td>
                             <div class="product-info">
-                                <img src="https://images.pexels.com/photos/719396/pexels-photo-719396.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                                    alt="" class="product-image">
-                                <span class="product-name">Tên sản phẩm</span>
+                                <img [src]="item.product.thumbnail" alt="" class="product-image">
+                                <span class="product-name">{{ item.product.name }}</span>
                             </div>
                         </td>
-                        <td>2</td>
-                        <td>100.000</td>
-                        <td>200.000</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div class="product-info">
-                                <img src="https://images.pexels.com/photos/719396/pexels-photo-719396.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                                    alt="" class="product-image">
-                                <span class="product-name">Tên sản phẩm</span>
-                            </div>
-                        </td>
-                        <td>2</td>
-                        <td>100.000</td>
-                        <td>200.000</td>
+                        <td>{{item.quantity}}</td>
+                        <td>{{ item.product.price | currency:'VND': 'symbol' : '1.0-0' }}</td>
+                        <td>{{ item.product.price * item.quantity | currency:'VND': 'symbol' : '1.0-0' }}</td>
                     </tr>
                 </tbody>
             </table>
             <div class="text-start mt-3">
-                <h4 class="header-text text-end">Tổng giá: 350.000 d</h4>
+                <h4 class="header-text text-end">Tổng giá: {{ totalAmount | currency:'VND': 'symbol' : '1.0-0' }}</h4>
             </div>
             <div class="mt-3">
                 <h4 class="product-header">Nhập coupon</h4>
                 <div class="input-group">
                     <input type="text" name="" id="" class="form-control" placeholder="Nhập coupon">
-                    <button class="btn btn-gradient" type="button">Áp dụng</button>
+                    <button class="btn btn-gradient" type="button" (click)="applyCoupon()">Áp dụng</button>
                 </div>
             </div>
             <div class="text-start mt-3">
