--- a/src/app/components/order-confirm/order-confirm.component.html
+++ b/src/app/components/order-confirm/order-confirm.component.html
@@ -1,49 +1,61 @@
 <app-header></app-header>
 <div class="container">
     <div class="confirmation-container">
-        <h1>Xác nhận đơn hàng</h1>
+        <h1>Chi tiết dơn hàng</h1>
         <p>Cảm ơn bạn đã đặt hàng! Dưới đây là thông tin chi tiết về đơn hàng của bạn</p>
     </div>
-    <div class="row">
-        <table>
-            <thead>
-                <tr>
-                    <th scope="col" class="text-start">Sản phẩm</th>
-                    <th scope="col">Số lượng</th>
-                    <th scope="col">Đơn giá</th>
-                    <th scope="col">Tổng giá</th>
-                </tr>
-            </thead>
-            <tbody>
-                <ng-container *ngFor="let item of cartItems">
-                <tr >
-                    <td>
-                        <div class="product-info">
-                            <img [src]="item.product.thumbnail" alt="" class="product-image">
-                            <span class="product-name">{{ item.product.name }}</span>
-                        </div>
-                    </td>
-                    <td>{{item.quantity}}</td>
-                    <td>{{ item.product.price | currency:'VND': 'symbol' : '1.0-0' }}</td>
-                    <td>{{ item.product.price * item.quantity | currency:'VND': 'symbol' : '1.0-0' }}</td>
-                </tr>
-            </ng-container>
-            </tbody>
-        </table>
-        <div class="row justify-content-center align-item-center">
-            <div class="input-group mb-3 mt-3 row justify-content-center align-item-center">
-                <div class="col-lg-6 ">
-                    <input type="text" class="form-control" [(ngModel)]="couponCode" name="" id=""
-                        aria-describedby="helpId" placeholder="">
-                </div>
-                <div class="input-group-append col-lg-6" >
-                    <button class="btn btn-outline-secondary" type="button" (click)="applyCoupon()">Ap dung ma</button>
-                </div>
+    <div class="row" *ngIf="orderResponse">
+        <div class="col-md-6">
+            <h2 class="product-header">Thông tin người nhận</h2>
+            <div class="mb-3">
+                <p class="form-label">Họ và tên: {{orderResponse.fullname}}</p>
             </div>
-            <div>
-                <p class="mb-0">Tong tien: {{ totalAmount | currency:'VND': 'symbol' : '1.0-0' }}</p>
-                <div class="text-center mt-3">
-                    <button class="btn btn-gradient" type="button">Thanh toán</button>
+            <div class="mb-3">
+                <p class="form-label">Email: {{orderResponse.email}}</p>
+            </div>
+            <div class="mb-3">
+                <p class="form-label">Số điện thoại: {{orderResponse.phone_number}}</p>
+            </div>
+            <div class="mb-3">
+                <p class="form-label">Địa chỉ: {{orderResponse.address}}</p>
+            </div>
+            <div class="mb-3">
+                <p class="form-label">Ghi chú: {{orderResponse.note}}</p>
+            </div>
+            <div class="mb-3">
+                <p class="form-label">Phương thức vận chuyển: {{ orderResponse.shipping_method }}</p>
+            </div>
+            <div class="mb-3">
+                <p class="form-label">Phương thức thanh toán: {{orderResponse.payment_method}}</p>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <table>
+                <thead>
+                    <tr>
+                        <th scope="col" class="text-start">Sản phẩm</th>
+                        <th scope="col">Số lượng</th>
+                        <th scope="col">Đơn giá</th>
+                        <th scope="col">Tổng giá</th>
+                    </tr>
+                </thead>
+                <!-- <tbody>
+                    <tr *ngFor="let detail of orderResponse.order_details">
+                        <td>
+                            <div class="product-info">
+                                <img [src]="detail.product.thumbnail" alt="" class="product-image">
+                                <span class="product-name">{{ detail.product.name }}</span>
+                            </div>
+                        </td>
+                        <td>{{ detail.number_of_products}}</td>
+                        <td>{{ detail.price | currency:'VND': 'symbol' : '1.0-0' }}</td>
+                        <td>{{ detail.total_money | currency:'VND': 'symbol' : '1.0-0' }}</td>
+                    </tr>
+                </tbody> -->
+            </table>
+            <div class="text-start mt-3">
+                <div>
+                    <h4 class="mb-0">Tong tien: {{ orderResponse.total_money| currency:'VND': 'symbol' : '1.0-0' }}</h4>
                 </div>
             </div>
         </div>
