--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="note" class="form-label">Ghi chú</label>
-                    <input type="text" [(ngModel)]="orderData.note" name="" id="note" class="form-control">
+                    <input type="text" [(ngModel)]="orderData.note" formControlName="note" id="note" class="form-control">
                 </div>
                 <div class="mb-3 form-group">
                     <label for="shippingMethod" class="form-label">Phương thức vận chuyển</label>
