--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,16 +8,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" [routerLink]="['/']" routerLinkActive="router-link-active" >Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Thông tin</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><i class="fa-solid fa-cart-shopping">Shopping</i></a>
+                <a class="nav-link" [routerLink]="['/orders']" routerLinkActive="router-link-active" ><i class="fa-solid fa-cart-shopping">Giỏ hàng</i></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                <a class="nav-link"  routerLinkActive="router-link-active"  [routerLink]="['/login']" routerLinkActive="router-link-active"  tabindex="-1" aria-disabled="true">Đăng nhập</a>
               </li>
             </ul>
             <form class="d-flex">
