--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,7 +18,7 @@
     <div class="row">
         <div class="col-lg-4 col-md-6" *ngFor="let product of products">
           <div class="product-item">
-            <img [src]="product.url" alt="Product Image" class="product-image">
+            <a (click)="onProductClick(product.id)"><img [src]="product.url" alt="Product Image" class="product-image"></a>
             <h3 class="product-name">{{product.name}}</h3>
             <p class="product-description">{{product.description}}</p>
             <p class="product-warranty">Bảo hành</p>
