--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -3,107 +3,101 @@
     <div class="intro-section">
         <h1>Đặt hàng</h1>
     </div>
-    <form [formGroup]="orderForm">
-    <div class="row">
-        <div class="col-md-6">
-            <h2 class="product-header">Thông tin người nhận</h2>
-            <!-- <form class="form-inline"> -->       
+    <form [formGroup]="orderForm" (ngSubmit)="placeOrder()">
+        <div class="row">
+            <div class="col-md-6">
+                <h2 class="product-header">Thông tin người nhận</h2>
                 <div class="mb-3">
                     <label for="name" class="form-label">Họ và tên</label>
-                    <input type="text" [(ngModel)]="orderData.fullname" formControlName="fullname" name="" id="name" class="form-control"
-                    [class.is-invalid]="orderForm.get('fullname')!.invalid && orderForm.get('fullname')?.touched"
-                    >
+                    <input type="text" formControlName="fullname" id="name" class="form-control" 
+                           [class.is-invalid]="orderForm.get('fullname')!.invalid && orderForm.get('fullname')?.touched">
                     <div *ngIf="orderForm.get('fullname')!.invalid && orderForm.get('fullname')?.touched" class="invalid-feedback">
                         Họ và tên là trường bắt buộc
                     </div>
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
-                    <input type="text" [(ngModel)]="orderData.email" formControlName="email" id="email" class="form-control"
-                    [class.is-invalid]="orderForm.get('email')!.invalid && orderForm.get('email')?.touched"
-                    >
+                    <input type="text" formControlName="email" id="email" class="form-control" 
+                           [class.is-invalid]="orderForm.get('email')!.invalid && orderForm.get('email')?.touched">
                     <div *ngIf="orderForm.get('email')!.invalid && orderForm.get('email')?.touched" class="invalid-feedback">
                         Email chưa đúng định dạng
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label for="Phone" class="form-label">Số điện thoại</label>
-                    <input type="text" [(ngModel)]="orderData.phone_number" formControlName="phone_number" id="phone" class="form-control"
-                    [class.is-invalid]="orderForm.get('phone_number')!.invalid && orderForm.get('phone_number')?.touched"
-                    >
+                    <label for="phone" class="form-label">Số điện thoại</label>
+                    <input type="text" formControlName="phone_number" id="phone" class="form-control" 
+                           [class.is-invalid]="orderForm.get('phone_number')!.invalid && orderForm.get('phone_number')?.touched">
                     <div *ngIf="orderForm.get('phone_number')!.invalid && orderForm.get('phone_number')?.touched" class="invalid-feedback">
                         SDT là trường bắt buộc và tối thiểu 6 ký tự
                     </div>
                 </div>
                 <div class="mb-3">
                     <label for="address" class="form-label">Địa chỉ</label>
-                    <input type="text" [(ngModel)]="orderData.address" formControlName="address" id="address" class="form-control"
-                    [class.is-invalid]="orderForm.get('address')!.invalid && orderForm.get('address')?.touched"
-                    >
+                    <input type="text" formControlName="address" id="address" class="form-control" 
+                           [class.is-invalid]="orderForm.get('address')!.invalid && orderForm.get('address')?.touched">
                     <div *ngIf="orderForm.get('address')!.invalid && orderForm.get('address')?.touched" class="invalid-feedback">
-                       Địa chỉ nhà là trường bắt buộc và tối thiểu 5 ký tự
+                        Địa chỉ nhà là trường bắt buộc và tối thiểu 5 ký tự
                     </div>
                 </div>
                 <div class="mb-3">
                     <label for="note" class="form-label">Ghi chú</label>
-                    <input type="text" [(ngModel)]="orderData.note" formControlName="note" id="note" class="form-control">
+                    <input type="text" formControlName="note" id="note" class="form-control">
                 </div>
                 <div class="mb-3 form-group">
                     <label for="shippingMethod" class="form-label">Phương thức vận chuyển</label>
-                    <select class="form-control" name="" id="shippingMethod" [(ngModel)]="orderData.shipping_method">
+                    <select class="form-control" formControlName="shipping_method" id="shippingMethod">
                         <option value="express">Nhanh (express)</option>
                         <option value="normal">Thường (normal)</option>
                     </select>
                 </div>
                 <div class="mb-3 form-group">
                     <label for="paymentMethod" class="form-label">Phương thức Thanh Toán</label>
-                    <select class="form-control" name="" id="paymentMethod" [(ngModel)]="orderData.payment_method">
+                    <select class="form-control" formControlName="payment_method" id="paymentMethod">
                         <option value="cod">Thanh toán khi nhận hàng (COD)</option>
-                        <option value="orther">thanh toán khác</option>
+                        <option value="orther">Thanh toán khác</option>
                     </select>
-                </div>  
-            <!-- </form> -->
-        </div>
-        <div class="col-md-6">
-            <h2 class="product-order">Sản phẩm đã đặt hàng</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th scope="col" class="text-start">Sản phẩm</th>
-                        <th scope="col">Số lượng</th>
-                        <th scope="col">Đơn giá</th>
-                        <th scope="col">Tổng giá</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let item of cartItems">
-                        <td>
-                            <div class="product-info">
-                                <img [src]="item.product.thumbnail" alt="" class="product-image">
-                                <span class="product-name">{{ item.product.name }}</span>
-                            </div>
-                        </td>
-                        <td>{{item.quantity}}</td>
-                        <td>{{ item.product.price | currency:'VND': 'symbol' : '1.0-0' }}</td>
-                        <td>{{ item.product.price * item.quantity | currency:'VND': 'symbol' : '1.0-0' }}</td>
-                    </tr>
-                </tbody>
-            </table>
-            <div class="text-start mt-3">
-                <h4 class="header-text text-end">Tổng giá: {{ totalAmount | currency:'VND': 'symbol' : '1.0-0' }}</h4>
-            </div>
-            <div class="mt-3">
-                <h4 class="product-header">Nhập coupon</h4>
-                <div class="input-group">
-                    <input type="text" name="" id="" class="form-control" placeholder="Nhập coupon">
-                    <button class="btn btn-gradient" type="button" (click)="applyCoupon()">Áp dụng</button>
                 </div>
             </div>
-            <div class="text-start mt-3">
-                <button class="btn btn-gradient" (click)="placeOrder()" type="submit">Đặt hàng</button>
+            <div class="col-md-6">
+                <h2 class="product-order">Sản phẩm đã đặt hàng</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th scope="col" class="text-start">Sản phẩm</th>
+                            <th scope="col">Số lượng</th>
+                            <th scope="col">Đơn giá</th>
+                            <th scope="col">Tổng giá</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let item of cartItems">
+                            <td>
+                                <div class="product-info">
+                                    <img [src]="item.product.thumbnail" alt="" class="product-image">
+                                    <span class="product-name">{{ item.product.name }}</span>
+                                </div>
+                            </td>
+                            <td>{{ item.quantity }}</td>
+                            <td>{{ item.product.price | currency:'VND': 'symbol' : '1.0-0' }}</td>
+                            <td>{{ item.product.price * item.quantity | currency:'VND': 'symbol' : '1.0-0' }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="text-start mt-3">
+                    <h4 class="header-text text-end">Tổng giá: {{ totalAmount | currency:'VND': 'symbol' : '1.0-0' }}</h4>
+                </div>
+                <div class="mt-3">
+                    <h4 class="product-header">Nhập coupon</h4>
+                    <div class="input-group">
+                        <input type="text" name="" id="" class="form-control" placeholder="Nhập coupon">
+                        <button class="btn btn-gradient" type="button" (click)="applyCoupon()">Áp dụng</button>
+                    </div>
+                </div>
+                <div class="text-start mt-3">
+                    <button class="btn btn-gradient" type="submit">Đặt hàng</button>
+                </div>
             </div>
         </div>
-    </div>
-  </form>
+    </form>
 </div>
 <app-footer></app-footer>
