--- a/src/app/components/order-confirm/order-confirm.component.html
+++ b/src/app/components/order-confirm/order-confirm.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="container">
     <div class="confirmation-container">
-        <h1>Chi tiết dơn hàng</h1>
+        <h1 class="text-center">Chi tiết Đơn hàng</h1>
         <p>Cảm ơn bạn đã đặt hàng! Dưới đây là thông tin chi tiết về đơn hàng của bạn</p>
     </div>
     <div class="row" *ngIf="orderResponse">
