--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,30 +1,49 @@
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-          <a class="navbar-brand" href="#">Logo</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" [routerLink]="['/']" routerLinkActive="router-link-active" >Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Thông tin</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/orders']" routerLinkActive="router-link-active" ><i class="fa-solid fa-cart-shopping">Giỏ hàng</i></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link"  routerLinkActive="router-link-active"  [routerLink]="['/login']" routerLinkActive="router-link-active"  tabindex="-1" aria-disabled="true">Đăng nhập</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-      </nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="#">Logo</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" [routerLink]="['/']"
+              routerLinkActive="router-link-active">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Thông tin</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/orders']" routerLinkActive="router-link-active"><i
+                class="fa-solid fa-cart-shopping">Giỏ hàng</i></a>
+          </li>
+          <li class="nav-item">
+            <ng-container *ngIf="userResponse">
+              <ng-container ngbPopover="Tài khoản của tôi <br>Đơn mua<br>Đăng xuất" popoverTitle="User Actions"
+                triggers="click" [placement]="'bottom'">
+                <a class="nav-link" [routerLink]="['/profile']" [ngbPopover]="popoverContent" (click)="togglePopover($event)">{{userResponse.fullname}}</a>
+                <ng-template #popoverContent>
+                  <div class="popover-list">
+                    <a href="#" class="popover-item" (click)="handelItemClick(0)">Tài khoản của tôi</a>
+                    <a href="#" class="popover-item" (click)="handelItemClick(1)">Đơn mua</a>
+                    <a href="#" class="popover-item" (click)="handelItemClick(2)">Đăng xuất</a>
+                  </div>
+                </ng-template>
+              </ng-container>
+            </ng-container>
+            <ng-container *ngIf="!userResponse">
+              <a class="nav-link" routerLinkActive="router-link-active" [routerLink]="['/login']"
+                routerLinkActive="router-link-active" tabindex="-1" aria-disabled="true">Đăng nhập</a>
+            </ng-container>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
 </header>
