--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -33,7 +33,7 @@
             <div class="product-actions">
               <button class="btn btn-primary">Thêm vào giỏ hàng</button>
               <span class="space-x"></span>
-              <button class="btn btn-success">Mua ngay</button>
+              <button class="btn btn-success" (click)="buyNow(product.id)">Mua ngay</button>
             </div>
           </div>
         </div>
