--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,4 @@
+@import '../../styles/shared-styles.scss';
 .navbar{
     background-color: rgba(0, 0, 0, 0) !important;
     
@@ -15,7 +16,7 @@
     padding: 8px 16px;
 }
 .navbar .container .navbar-nav .nav-link.active{
-    background-color: rgb(127, 68, 255) !important;
+    background-color: $shopapp-color !important;
     color: white !important;
 }
 
