--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,3 +1,4 @@
+@import '../../styles/shared-styles.scss';
 
     .intro-section {
         text-align: center;
@@ -75,7 +76,7 @@
     }
 
     .product-warranty {
-        color: rgb(242, 126, 212);
+        color: $shopapp-tint-color;
     }
 
     .product-name {
@@ -99,4 +100,24 @@
 
     .space-x {
         margin: 0 5px;
+    }
+
+    .page-number{
+        cursor: pointer;
+        padding: 5px 10px;
+        border: 1px solid #ccc;
+        margin: 0 2px;
+        border-radius: 3px;
+    }
+    .page-number.active{
+        background-color: $shopapp-color !important;
+        color: #fff;
+        border-color: $shopapp-color !important;
+    }   
+    .btn-primary{
+        background-color: $shopapp-color;
+        border-color: $shopapp-color;
+    }
+    .btn.btn-primary{
+        margin-left: 10px ;
     }
