--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,9 +1,10 @@
+@import '../../styles/shared-styles.scss';
 .container{
     color: white;
     height: 100vh;
 }
 .login-form{
-    background-color: rgb(12, 12, 55);
+    background-color: $shopapp-background-color;
     border-radius: 10px;
     padding: 20px;
     max-width: 500px;
@@ -50,7 +51,7 @@
 }
 .checkbox-text input[type="checkbox"]:checked{
     border-color: white;
-    background-color: rgb(233, 66, 178);
+    background-color: $shopapp-tint-color;
 }
 .form-check-input{
     margin-right: 5px;
@@ -63,10 +64,10 @@
     margin-top: 20px;
     width: 200px;
     color: white;
-    border: 1px solid rgb(225, 64, 180);
+    border: 1px solid $shopapp-tint-color !important;
 }
 .access-right:focus{
-    border: 1px solid rgb(225, 64, 180);
+    border: 1px solid $shopapp-tint-color;
 }
 .form-control::placeholder{
     color: rgba(243, 165, 42, 0.4) !important;
@@ -79,7 +80,7 @@
     color: rgba(243, 165, 42, 0.4) !important;
 }
 .login-button{
-    background: linear-gradient(to right, rgb(225, 64, 180), rgb(126,43,237));
+    background: linear-gradient(to right, $shopapp-tint-color, $shopapp-color);
     color: white;
     border-radius: 30px;
     width: 100%;
