--- a/src/app/components/order-confirm/order-confirm.component.scss
+++ b/src/app/components/order-confirm/order-confirm.component.scss
@@ -1,3 +1,4 @@
+@import '../../styles/shared-styles.scss';
 .container{
     color: white;
 }
@@ -16,7 +17,7 @@ table{
     border-collapse: separate;
     border: 1px solid white;
     border-spacing: 0;
-    background-color: rgb(12, 13, 54);
+    background-color: $shopapp-background-color;
 }
 th, td{
     padding: 10px;
@@ -37,7 +38,7 @@ th, td{
     margin-right: 10px;
 }
 .btn-gradient{
-    background: linear-gradient(to right, rgb(225, 64, 180), rgb(126, 43, 237));
+    background: linear-gradient(to right, rgb(225, 64, 180), $shopapp-color);
     color: white;
     border-radius: 30px;
     width: 200px;
