--- a/src/app/components/order/order.component.scss
+++ b/src/app/components/order/order.component.scss
@@ -1,3 +1,4 @@
+@import '../../styles/shared-styles.scss';
 .container{
     color: white;
 }
@@ -7,10 +8,10 @@
     text-align: center;
 }
 .product-header{
-    color: rgb(233, 66, 176);
+    color: $shopapp-tint-color;
 }
 .form-control{
-    background-color: rgb(19, 23, 42);
+    background-color: $shopapp-background-color;
     border: 1px solid rgb(29, 33, 54);
     color: white;
 }
@@ -31,7 +32,7 @@ table{
     border-collapse: separate;
     border: 1px solid white;
     border-spacing: 0;
-    background-color: rgb(12, 13, 54);
+    background-color: $shopapp-background-color;
 }
 th, td{
     padding: 10px;
@@ -52,7 +53,7 @@ th, td{
     margin-right: 10px;
 }
 .btn-gradient{
-    background: linear-gradient(to right, rgb(225, 64, 180), rgb(126, 43, 237));
+    background: linear-gradient(to right, $shopapp-tint-color, $shopapp-color);
     color: white;
     border-radius: 30px;
     width: 200px;
