--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -33,3 +33,7 @@
     background-color: #f3f3f3;
     color: red;
 }
+.nav-item{
+    background-color: $shopapp-color !important;
+    color: white !important;
+}
